parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> INICIO cuerpo FIN
Rule 2     cuerpo -> declaraciones
Rule 3     cuerpo -> instrucciones
Rule 4     cuerpo -> cuerpo declaraciones
Rule 5     cuerpo -> cuerpo instrucciones
Rule 6     declaraciones -> declaracion
Rule 7     declaraciones -> declaraciones declaracion
Rule 8     declaracion -> VAR IDENTIFICADOR COLON tipo SEMICOLON
Rule 9     tipo -> CHICOENTERO
Rule 10    tipo -> FLOTANTE
Rule 11    tipo -> DOBLE
Rule 12    tipo -> VERDADEROOFALSO
Rule 13    tipo -> STRING
Rule 14    tipo -> LETRA
Rule 15    instrucciones -> instruccion
Rule 16    instrucciones -> instrucciones instruccion
Rule 17    instruccion -> asignacion
Rule 18    instruccion -> decision
Rule 19    instruccion -> ciclo
Rule 20    instruccion -> para
Rule 21    instruccion -> do_mientras
Rule 22    instruccion -> tratamiento_error
Rule 23    instruccion -> seleccion_multiple
Rule 24    instruccion -> llamada_funcion
Rule 25    instruccion -> bloque
Rule 26    asignacion -> IDENTIFICADOR EQUALS expresion SEMICOLON
Rule 27    decision -> PREGUNTAEXISTENCIAL LBRACKET expresion RBRACKET bloque PUESSINO bloque
Rule 28    decision -> PREGUNTAEXISTENCIAL LBRACKET expresion RBRACKET bloque
Rule 29    ciclo -> MIENTRAS LBRACKET expresion RBRACKET bloque
Rule 30    para -> CUATRO LBRACKET asignacion expresion SEMICOLON asignacion RBRACKET bloque
Rule 31    do_mientras -> DOMIENTRAS bloque MIENTRAS_POST LBRACKET expresion RBRACKET SEMICOLON
Rule 32    tratamiento_error -> INTENTA bloque AGARRAELERROR LBRACKET IDENTIFICADOR RBRACKET bloque
Rule 33    seleccion_multiple -> SWITCH LBRACKET expresion RBRACKET LBRACE casos defecto RBRACE
Rule 34    casos -> caso
Rule 35    casos -> casos caso
Rule 36    caso -> OPCION valor COLON bloque
Rule 37    defecto -> DEFAULT COLON bloque
Rule 38    llamada_funcion -> PRINT LBRACKET lista_expresiones RBRACKET SEMICOLON
Rule 39    lista_expresiones -> expresion
Rule 40    lista_expresiones -> lista_expresiones COMMA expresion
Rule 41    lista_expresiones -> <empty>
Rule 42    bloque -> LBRACE instrucciones RBRACE
Rule 43    bloque -> LBRACE RBRACE
Rule 44    expresion -> expresion_logica
Rule 45    expresion_logica -> expresion_relacional
Rule 46    expresion_logica -> expresion_logica AND expresion_relacional
Rule 47    expresion_logica -> expresion_logica OR expresion_relacional
Rule 48    expresion_relacional -> expresion_aritmetica
Rule 49    expresion_relacional -> expresion_aritmetica EQ expresion_aritmetica
Rule 50    expresion_relacional -> expresion_aritmetica NE expresion_aritmetica
Rule 51    expresion_relacional -> expresion_aritmetica LT expresion_aritmetica
Rule 52    expresion_relacional -> expresion_aritmetica LE expresion_aritmetica
Rule 53    expresion_relacional -> expresion_aritmetica GT expresion_aritmetica
Rule 54    expresion_relacional -> expresion_aritmetica GE expresion_aritmetica
Rule 55    expresion_aritmetica -> termino
Rule 56    expresion_aritmetica -> expresion_aritmetica PLUS termino
Rule 57    expresion_aritmetica -> expresion_aritmetica MINUS termino
Rule 58    termino -> factor
Rule 59    termino -> termino TIMES factor
Rule 60    termino -> termino DIVIDE factor
Rule 61    factor -> LBRACKET expresion RBRACKET
Rule 62    factor -> valor
Rule 63    factor -> IDENTIFICADOR
Rule 64    valor -> NUMERO
Rule 65    valor -> VERDAD
Rule 66    valor -> FAKE
Rule 67    valor -> CADENA

Terminals, with rules where they appear

AGARRAELERROR        : 32
AND                  : 46
CADENA               : 67
CHICOENTERO          : 9
COLON                : 8 36 37
COMMA                : 40
CUATRO               : 30
DEFAULT              : 37
DIVIDE               : 60
DOBLE                : 11
DOMIENTRAS           : 31
EQ                   : 49
EQUALS               : 26
FAKE                 : 66
FIN                  : 1
FLOTANTE             : 10
GE                   : 54
GT                   : 53
IDENTIFICADOR        : 8 26 32 63
INICIO               : 1
INTENTA              : 32
LBRACE               : 33 42 43
LBRACKET             : 27 28 29 30 31 32 33 38 61
LE                   : 52
LETRA                : 14
LT                   : 51
MIENTRAS             : 29
MIENTRAS_POST        : 31
MINUS                : 57
NE                   : 50
NUMERO               : 64
OPCION               : 36
OR                   : 47
PLUS                 : 56
PREGUNTAEXISTENCIAL  : 27 28
PRINT                : 38
PUESSINO             : 27
RBRACE               : 33 42 43
RBRACKET             : 27 28 29 30 31 32 33 38 61
SEMICOLON            : 8 26 30 31 38
STRING               : 13
SWITCH               : 33
TIMES                : 59
VAR                  : 8
VERDAD               : 65
VERDADEROOFALSO      : 12
error                : 

Nonterminals, with rules where they appear

asignacion           : 17 30 30
bloque               : 25 27 27 28 29 30 31 32 32 36 37
caso                 : 34 35
casos                : 33 35
ciclo                : 19
cuerpo               : 1 4 5
decision             : 18
declaracion          : 6 7
declaraciones        : 2 4 7
defecto              : 33
do_mientras          : 21
expresion            : 26 27 28 29 30 31 33 39 40 61
expresion_aritmetica : 48 49 49 50 50 51 51 52 52 53 53 54 54 56 57
expresion_logica     : 44 46 47
expresion_relacional : 45 46 47
factor               : 58 59 60
instruccion          : 15 16
instrucciones        : 3 5 16 42
lista_expresiones    : 38 40
llamada_funcion      : 24
para                 : 20
programa             : 0
seleccion_multiple   : 23
termino              : 55 56 57 59 60
tipo                 : 8
tratamiento_error    : 22
valor                : 36 62

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . INICIO cuerpo FIN

    INICIO          shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> INICIO . cuerpo FIN
    (2) cuerpo -> . declaraciones
    (3) cuerpo -> . instrucciones
    (4) cuerpo -> . cuerpo declaraciones
    (5) cuerpo -> . cuerpo instrucciones
    (6) declaraciones -> . declaracion
    (7) declaraciones -> . declaraciones declaracion
    (15) instrucciones -> . instruccion
    (16) instrucciones -> . instrucciones instruccion
    (8) declaracion -> . VAR IDENTIFICADOR COLON tipo SEMICOLON
    (17) instruccion -> . asignacion
    (18) instruccion -> . decision
    (19) instruccion -> . ciclo
    (20) instruccion -> . para
    (21) instruccion -> . do_mientras
    (22) instruccion -> . tratamiento_error
    (23) instruccion -> . seleccion_multiple
    (24) instruccion -> . llamada_funcion
    (25) instruccion -> . bloque
    (26) asignacion -> . IDENTIFICADOR EQUALS expresion SEMICOLON
    (27) decision -> . PREGUNTAEXISTENCIAL LBRACKET expresion RBRACKET bloque PUESSINO bloque
    (28) decision -> . PREGUNTAEXISTENCIAL LBRACKET expresion RBRACKET bloque
    (29) ciclo -> . MIENTRAS LBRACKET expresion RBRACKET bloque
    (30) para -> . CUATRO LBRACKET asignacion expresion SEMICOLON asignacion RBRACKET bloque
    (31) do_mientras -> . DOMIENTRAS bloque MIENTRAS_POST LBRACKET expresion RBRACKET SEMICOLON
    (32) tratamiento_error -> . INTENTA bloque AGARRAELERROR LBRACKET IDENTIFICADOR RBRACKET bloque
    (33) seleccion_multiple -> . SWITCH LBRACKET expresion RBRACKET LBRACE casos defecto RBRACE
    (38) llamada_funcion -> . PRINT LBRACKET lista_expresiones RBRACKET SEMICOLON
    (42) bloque -> . LBRACE instrucciones RBRACE
    (43) bloque -> . LBRACE RBRACE

    VAR             shift and go to state 8
    IDENTIFICADOR   shift and go to state 9
    PREGUNTAEXISTENCIAL shift and go to state 19
    MIENTRAS        shift and go to state 20
    CUATRO          shift and go to state 21
    DOMIENTRAS      shift and go to state 22
    INTENTA         shift and go to state 23
    SWITCH          shift and go to state 24
    PRINT           shift and go to state 26
    LBRACE          shift and go to state 25

    cuerpo                         shift and go to state 3
    declaraciones                  shift and go to state 4
    instrucciones                  shift and go to state 5
    declaracion                    shift and go to state 6
    instruccion                    shift and go to state 7
    asignacion                     shift and go to state 10
    decision                       shift and go to state 11
    ciclo                          shift and go to state 12
    para                           shift and go to state 13
    do_mientras                    shift and go to state 14
    tratamiento_error              shift and go to state 15
    seleccion_multiple             shift and go to state 16
    llamada_funcion                shift and go to state 17
    bloque                         shift and go to state 18

state 3

    (1) programa -> INICIO cuerpo . FIN
    (4) cuerpo -> cuerpo . declaraciones
    (5) cuerpo -> cuerpo . instrucciones
    (6) declaraciones -> . declaracion
    (7) declaraciones -> . declaraciones declaracion
    (15) instrucciones -> . instruccion
    (16) instrucciones -> . instrucciones instruccion
    (8) declaracion -> . VAR IDENTIFICADOR COLON tipo SEMICOLON
    (17) instruccion -> . asignacion
    (18) instruccion -> . decision
    (19) instruccion -> . ciclo
    (20) instruccion -> . para
    (21) instruccion -> . do_mientras
    (22) instruccion -> . tratamiento_error
    (23) instruccion -> . seleccion_multiple
    (24) instruccion -> . llamada_funcion
    (25) instruccion -> . bloque
    (26) asignacion -> . IDENTIFICADOR EQUALS expresion SEMICOLON
    (27) decision -> . PREGUNTAEXISTENCIAL LBRACKET expresion RBRACKET bloque PUESSINO bloque
    (28) decision -> . PREGUNTAEXISTENCIAL LBRACKET expresion RBRACKET bloque
    (29) ciclo -> . MIENTRAS LBRACKET expresion RBRACKET bloque
    (30) para -> . CUATRO LBRACKET asignacion expresion SEMICOLON asignacion RBRACKET bloque
    (31) do_mientras -> . DOMIENTRAS bloque MIENTRAS_POST LBRACKET expresion RBRACKET SEMICOLON
    (32) tratamiento_error -> . INTENTA bloque AGARRAELERROR LBRACKET IDENTIFICADOR RBRACKET bloque
    (33) seleccion_multiple -> . SWITCH LBRACKET expresion RBRACKET LBRACE casos defecto RBRACE
    (38) llamada_funcion -> . PRINT LBRACKET lista_expresiones RBRACKET SEMICOLON
    (42) bloque -> . LBRACE instrucciones RBRACE
    (43) bloque -> . LBRACE RBRACE

    FIN             shift and go to state 27
    VAR             shift and go to state 8
    IDENTIFICADOR   shift and go to state 9
    PREGUNTAEXISTENCIAL shift and go to state 19
    MIENTRAS        shift and go to state 20
    CUATRO          shift and go to state 21
    DOMIENTRAS      shift and go to state 22
    INTENTA         shift and go to state 23
    SWITCH          shift and go to state 24
    PRINT           shift and go to state 26
    LBRACE          shift and go to state 25

    declaraciones                  shift and go to state 28
    instrucciones                  shift and go to state 29
    declaracion                    shift and go to state 6
    instruccion                    shift and go to state 7
    asignacion                     shift and go to state 10
    decision                       shift and go to state 11
    ciclo                          shift and go to state 12
    para                           shift and go to state 13
    do_mientras                    shift and go to state 14
    tratamiento_error              shift and go to state 15
    seleccion_multiple             shift and go to state 16
    llamada_funcion                shift and go to state 17
    bloque                         shift and go to state 18

state 4

    (2) cuerpo -> declaraciones .
    (7) declaraciones -> declaraciones . declaracion
    (8) declaracion -> . VAR IDENTIFICADOR COLON tipo SEMICOLON

  ! shift/reduce conflict for VAR resolved as shift
    FIN             reduce using rule 2 (cuerpo -> declaraciones .)
    IDENTIFICADOR   reduce using rule 2 (cuerpo -> declaraciones .)
    PREGUNTAEXISTENCIAL reduce using rule 2 (cuerpo -> declaraciones .)
    MIENTRAS        reduce using rule 2 (cuerpo -> declaraciones .)
    CUATRO          reduce using rule 2 (cuerpo -> declaraciones .)
    DOMIENTRAS      reduce using rule 2 (cuerpo -> declaraciones .)
    INTENTA         reduce using rule 2 (cuerpo -> declaraciones .)
    SWITCH          reduce using rule 2 (cuerpo -> declaraciones .)
    PRINT           reduce using rule 2 (cuerpo -> declaraciones .)
    LBRACE          reduce using rule 2 (cuerpo -> declaraciones .)
    VAR             shift and go to state 8

  ! VAR             [ reduce using rule 2 (cuerpo -> declaraciones .) ]

    declaracion                    shift and go to state 30

state 5

    (3) cuerpo -> instrucciones .
    (16) instrucciones -> instrucciones . instruccion
    (17) instruccion -> . asignacion
    (18) instruccion -> . decision
    (19) instruccion -> . ciclo
    (20) instruccion -> . para
    (21) instruccion -> . do_mientras
    (22) instruccion -> . tratamiento_error
    (23) instruccion -> . seleccion_multiple
    (24) instruccion -> . llamada_funcion
    (25) instruccion -> . bloque
    (26) asignacion -> . IDENTIFICADOR EQUALS expresion SEMICOLON
    (27) decision -> . PREGUNTAEXISTENCIAL LBRACKET expresion RBRACKET bloque PUESSINO bloque
    (28) decision -> . PREGUNTAEXISTENCIAL LBRACKET expresion RBRACKET bloque
    (29) ciclo -> . MIENTRAS LBRACKET expresion RBRACKET bloque
    (30) para -> . CUATRO LBRACKET asignacion expresion SEMICOLON asignacion RBRACKET bloque
    (31) do_mientras -> . DOMIENTRAS bloque MIENTRAS_POST LBRACKET expresion RBRACKET SEMICOLON
    (32) tratamiento_error -> . INTENTA bloque AGARRAELERROR LBRACKET IDENTIFICADOR RBRACKET bloque
    (33) seleccion_multiple -> . SWITCH LBRACKET expresion RBRACKET LBRACE casos defecto RBRACE
    (38) llamada_funcion -> . PRINT LBRACKET lista_expresiones RBRACKET SEMICOLON
    (42) bloque -> . LBRACE instrucciones RBRACE
    (43) bloque -> . LBRACE RBRACE

  ! shift/reduce conflict for IDENTIFICADOR resolved as shift
  ! shift/reduce conflict for PREGUNTAEXISTENCIAL resolved as shift
  ! shift/reduce conflict for MIENTRAS resolved as shift
  ! shift/reduce conflict for CUATRO resolved as shift
  ! shift/reduce conflict for DOMIENTRAS resolved as shift
  ! shift/reduce conflict for INTENTA resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for LBRACE resolved as shift
    FIN             reduce using rule 3 (cuerpo -> instrucciones .)
    VAR             reduce using rule 3 (cuerpo -> instrucciones .)
    IDENTIFICADOR   shift and go to state 9
    PREGUNTAEXISTENCIAL shift and go to state 19
    MIENTRAS        shift and go to state 20
    CUATRO          shift and go to state 21
    DOMIENTRAS      shift and go to state 22
    INTENTA         shift and go to state 23
    SWITCH          shift and go to state 24
    PRINT           shift and go to state 26
    LBRACE          shift and go to state 25

  ! IDENTIFICADOR   [ reduce using rule 3 (cuerpo -> instrucciones .) ]
  ! PREGUNTAEXISTENCIAL [ reduce using rule 3 (cuerpo -> instrucciones .) ]
  ! MIENTRAS        [ reduce using rule 3 (cuerpo -> instrucciones .) ]
  ! CUATRO          [ reduce using rule 3 (cuerpo -> instrucciones .) ]
  ! DOMIENTRAS      [ reduce using rule 3 (cuerpo -> instrucciones .) ]
  ! INTENTA         [ reduce using rule 3 (cuerpo -> instrucciones .) ]
  ! SWITCH          [ reduce using rule 3 (cuerpo -> instrucciones .) ]
  ! PRINT           [ reduce using rule 3 (cuerpo -> instrucciones .) ]
  ! LBRACE          [ reduce using rule 3 (cuerpo -> instrucciones .) ]

    instruccion                    shift and go to state 31
    asignacion                     shift and go to state 10
    decision                       shift and go to state 11
    ciclo                          shift and go to state 12
    para                           shift and go to state 13
    do_mientras                    shift and go to state 14
    tratamiento_error              shift and go to state 15
    seleccion_multiple             shift and go to state 16
    llamada_funcion                shift and go to state 17
    bloque                         shift and go to state 18

state 6

    (6) declaraciones -> declaracion .

    VAR             reduce using rule 6 (declaraciones -> declaracion .)
    FIN             reduce using rule 6 (declaraciones -> declaracion .)
    IDENTIFICADOR   reduce using rule 6 (declaraciones -> declaracion .)
    PREGUNTAEXISTENCIAL reduce using rule 6 (declaraciones -> declaracion .)
    MIENTRAS        reduce using rule 6 (declaraciones -> declaracion .)
    CUATRO          reduce using rule 6 (declaraciones -> declaracion .)
    DOMIENTRAS      reduce using rule 6 (declaraciones -> declaracion .)
    INTENTA         reduce using rule 6 (declaraciones -> declaracion .)
    SWITCH          reduce using rule 6 (declaraciones -> declaracion .)
    PRINT           reduce using rule 6 (declaraciones -> declaracion .)
    LBRACE          reduce using rule 6 (declaraciones -> declaracion .)


state 7

    (15) instrucciones -> instruccion .

    IDENTIFICADOR   reduce using rule 15 (instrucciones -> instruccion .)
    PREGUNTAEXISTENCIAL reduce using rule 15 (instrucciones -> instruccion .)
    MIENTRAS        reduce using rule 15 (instrucciones -> instruccion .)
    CUATRO          reduce using rule 15 (instrucciones -> instruccion .)
    DOMIENTRAS      reduce using rule 15 (instrucciones -> instruccion .)
    INTENTA         reduce using rule 15 (instrucciones -> instruccion .)
    SWITCH          reduce using rule 15 (instrucciones -> instruccion .)
    PRINT           reduce using rule 15 (instrucciones -> instruccion .)
    LBRACE          reduce using rule 15 (instrucciones -> instruccion .)
    FIN             reduce using rule 15 (instrucciones -> instruccion .)
    VAR             reduce using rule 15 (instrucciones -> instruccion .)
    RBRACE          reduce using rule 15 (instrucciones -> instruccion .)


state 8

    (8) declaracion -> VAR . IDENTIFICADOR COLON tipo SEMICOLON

    IDENTIFICADOR   shift and go to state 32


state 9

    (26) asignacion -> IDENTIFICADOR . EQUALS expresion SEMICOLON

    EQUALS          shift and go to state 33


state 10

    (17) instruccion -> asignacion .

    IDENTIFICADOR   reduce using rule 17 (instruccion -> asignacion .)
    PREGUNTAEXISTENCIAL reduce using rule 17 (instruccion -> asignacion .)
    MIENTRAS        reduce using rule 17 (instruccion -> asignacion .)
    CUATRO          reduce using rule 17 (instruccion -> asignacion .)
    DOMIENTRAS      reduce using rule 17 (instruccion -> asignacion .)
    INTENTA         reduce using rule 17 (instruccion -> asignacion .)
    SWITCH          reduce using rule 17 (instruccion -> asignacion .)
    PRINT           reduce using rule 17 (instruccion -> asignacion .)
    LBRACE          reduce using rule 17 (instruccion -> asignacion .)
    FIN             reduce using rule 17 (instruccion -> asignacion .)
    VAR             reduce using rule 17 (instruccion -> asignacion .)
    RBRACE          reduce using rule 17 (instruccion -> asignacion .)


state 11

    (18) instruccion -> decision .

    IDENTIFICADOR   reduce using rule 18 (instruccion -> decision .)
    PREGUNTAEXISTENCIAL reduce using rule 18 (instruccion -> decision .)
    MIENTRAS        reduce using rule 18 (instruccion -> decision .)
    CUATRO          reduce using rule 18 (instruccion -> decision .)
    DOMIENTRAS      reduce using rule 18 (instruccion -> decision .)
    INTENTA         reduce using rule 18 (instruccion -> decision .)
    SWITCH          reduce using rule 18 (instruccion -> decision .)
    PRINT           reduce using rule 18 (instruccion -> decision .)
    LBRACE          reduce using rule 18 (instruccion -> decision .)
    FIN             reduce using rule 18 (instruccion -> decision .)
    VAR             reduce using rule 18 (instruccion -> decision .)
    RBRACE          reduce using rule 18 (instruccion -> decision .)


state 12

    (19) instruccion -> ciclo .

    IDENTIFICADOR   reduce using rule 19 (instruccion -> ciclo .)
    PREGUNTAEXISTENCIAL reduce using rule 19 (instruccion -> ciclo .)
    MIENTRAS        reduce using rule 19 (instruccion -> ciclo .)
    CUATRO          reduce using rule 19 (instruccion -> ciclo .)
    DOMIENTRAS      reduce using rule 19 (instruccion -> ciclo .)
    INTENTA         reduce using rule 19 (instruccion -> ciclo .)
    SWITCH          reduce using rule 19 (instruccion -> ciclo .)
    PRINT           reduce using rule 19 (instruccion -> ciclo .)
    LBRACE          reduce using rule 19 (instruccion -> ciclo .)
    FIN             reduce using rule 19 (instruccion -> ciclo .)
    VAR             reduce using rule 19 (instruccion -> ciclo .)
    RBRACE          reduce using rule 19 (instruccion -> ciclo .)


state 13

    (20) instruccion -> para .

    IDENTIFICADOR   reduce using rule 20 (instruccion -> para .)
    PREGUNTAEXISTENCIAL reduce using rule 20 (instruccion -> para .)
    MIENTRAS        reduce using rule 20 (instruccion -> para .)
    CUATRO          reduce using rule 20 (instruccion -> para .)
    DOMIENTRAS      reduce using rule 20 (instruccion -> para .)
    INTENTA         reduce using rule 20 (instruccion -> para .)
    SWITCH          reduce using rule 20 (instruccion -> para .)
    PRINT           reduce using rule 20 (instruccion -> para .)
    LBRACE          reduce using rule 20 (instruccion -> para .)
    FIN             reduce using rule 20 (instruccion -> para .)
    VAR             reduce using rule 20 (instruccion -> para .)
    RBRACE          reduce using rule 20 (instruccion -> para .)


state 14

    (21) instruccion -> do_mientras .

    IDENTIFICADOR   reduce using rule 21 (instruccion -> do_mientras .)
    PREGUNTAEXISTENCIAL reduce using rule 21 (instruccion -> do_mientras .)
    MIENTRAS        reduce using rule 21 (instruccion -> do_mientras .)
    CUATRO          reduce using rule 21 (instruccion -> do_mientras .)
    DOMIENTRAS      reduce using rule 21 (instruccion -> do_mientras .)
    INTENTA         reduce using rule 21 (instruccion -> do_mientras .)
    SWITCH          reduce using rule 21 (instruccion -> do_mientras .)
    PRINT           reduce using rule 21 (instruccion -> do_mientras .)
    LBRACE          reduce using rule 21 (instruccion -> do_mientras .)
    FIN             reduce using rule 21 (instruccion -> do_mientras .)
    VAR             reduce using rule 21 (instruccion -> do_mientras .)
    RBRACE          reduce using rule 21 (instruccion -> do_mientras .)


state 15

    (22) instruccion -> tratamiento_error .

    IDENTIFICADOR   reduce using rule 22 (instruccion -> tratamiento_error .)
    PREGUNTAEXISTENCIAL reduce using rule 22 (instruccion -> tratamiento_error .)
    MIENTRAS        reduce using rule 22 (instruccion -> tratamiento_error .)
    CUATRO          reduce using rule 22 (instruccion -> tratamiento_error .)
    DOMIENTRAS      reduce using rule 22 (instruccion -> tratamiento_error .)
    INTENTA         reduce using rule 22 (instruccion -> tratamiento_error .)
    SWITCH          reduce using rule 22 (instruccion -> tratamiento_error .)
    PRINT           reduce using rule 22 (instruccion -> tratamiento_error .)
    LBRACE          reduce using rule 22 (instruccion -> tratamiento_error .)
    FIN             reduce using rule 22 (instruccion -> tratamiento_error .)
    VAR             reduce using rule 22 (instruccion -> tratamiento_error .)
    RBRACE          reduce using rule 22 (instruccion -> tratamiento_error .)


state 16

    (23) instruccion -> seleccion_multiple .

    IDENTIFICADOR   reduce using rule 23 (instruccion -> seleccion_multiple .)
    PREGUNTAEXISTENCIAL reduce using rule 23 (instruccion -> seleccion_multiple .)
    MIENTRAS        reduce using rule 23 (instruccion -> seleccion_multiple .)
    CUATRO          reduce using rule 23 (instruccion -> seleccion_multiple .)
    DOMIENTRAS      reduce using rule 23 (instruccion -> seleccion_multiple .)
    INTENTA         reduce using rule 23 (instruccion -> seleccion_multiple .)
    SWITCH          reduce using rule 23 (instruccion -> seleccion_multiple .)
    PRINT           reduce using rule 23 (instruccion -> seleccion_multiple .)
    LBRACE          reduce using rule 23 (instruccion -> seleccion_multiple .)
    FIN             reduce using rule 23 (instruccion -> seleccion_multiple .)
    VAR             reduce using rule 23 (instruccion -> seleccion_multiple .)
    RBRACE          reduce using rule 23 (instruccion -> seleccion_multiple .)


state 17

    (24) instruccion -> llamada_funcion .

    IDENTIFICADOR   reduce using rule 24 (instruccion -> llamada_funcion .)
    PREGUNTAEXISTENCIAL reduce using rule 24 (instruccion -> llamada_funcion .)
    MIENTRAS        reduce using rule 24 (instruccion -> llamada_funcion .)
    CUATRO          reduce using rule 24 (instruccion -> llamada_funcion .)
    DOMIENTRAS      reduce using rule 24 (instruccion -> llamada_funcion .)
    INTENTA         reduce using rule 24 (instruccion -> llamada_funcion .)
    SWITCH          reduce using rule 24 (instruccion -> llamada_funcion .)
    PRINT           reduce using rule 24 (instruccion -> llamada_funcion .)
    LBRACE          reduce using rule 24 (instruccion -> llamada_funcion .)
    FIN             reduce using rule 24 (instruccion -> llamada_funcion .)
    VAR             reduce using rule 24 (instruccion -> llamada_funcion .)
    RBRACE          reduce using rule 24 (instruccion -> llamada_funcion .)


state 18

    (25) instruccion -> bloque .
